--- a/blockbase/sass/blocks/_navigation.scss
+++ b/blockbase/sass/blocks/_navigation.scss
@@ -42,7 +42,7 @@
 		}
 
 		.wp-block-navigation-item {
-			align-items: flex-start;
+			align-items: var(--navigation-layout-justification-setting, flex-start);
 		}
 
 		.wp-block-navigation__responsive-container-content .has-child { // Needed for specificity to beat the navigation block CSS
